# d3d11

./: .gitmodules  CMakeLists.txt  guidelines.md  post_build.py  pre_build.py  utils.cmake
models/: Running.fbx  Running.gltf  capsule.blend  capsule.blend1  capsule.glb  running.glb  untitled.blend  untitled.glb  untitled.gltf
scripts/: post_build.py  pre_build.py  utils.py
shaders/: basic.hlsl  basic.hlsli  basic_ps.hlsl  basic_vs.hlsl  default.hlsl  skybox-old.hlsl  skybox.hlsl  skybox_vs.hlsl  test.hlsl  utils.hlsli  water.glsl
src/: dx.cpp  dx.h  gltf.cpp  gltf.h  main.cpp  math.cpp  math.h  misc.cpp  misc.h  misc.tpp  pch.h
tmp/: default.hlsl  skybox-old.hlsl  test.hlsl
